--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -11,8 +11,7 @@
         android:id="@+id/searchList"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:background="@drawable/edittext"
-        android:hint="Name"
+        android:hint="Type restaurant name"
         android:inputType="textPersonName"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,7 +22,6 @@
         android:layout_width="wrap_content"
         android:layout_height="56dp"
         android:text="Search"
-        android:background="@drawable/mybuttonbackground"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
