--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -7,6 +7,41 @@
     android:layout_height="match_parent"
     tools:context=".Fragment.MapFragment">
 
+    <EditText
+        android:id="@+id/searchMap"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:hint="Type restaurant name"
+        android:inputType="textPersonName"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/searchButtonMap"/>
+
+    <Button
+        android:id="@+id/searchButtonMap"
+        android:layout_width="wrap_content"
+        android:layout_height="56dp"
+        android:text="Search"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+    <TextView
+        android:id="@+id/resetFiltersMap"
+        android:layout_width="wrap_content"
+        android:layout_height="16dp"
+        android:text="Reset all filters"
+        app:layout_constraintTop_toBottomOf="@id/searchButtonMap"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="72dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="parent"/>
+
     <ProgressBar
         android:id="@+id/progressBarMap"
         style="?android:attr/progressBarStyle"
@@ -18,15 +53,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="map"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
