--- a/app/src/main/res/layout/listview_layout.xml
+++ b/app/src/main/res/layout/listview_layout.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
 
     <TextView
@@ -31,19 +31,20 @@
 
     <RatingBar
         android:id="@+id/ratingBar"
-        android:layout_width="166dp"
-        android:layout_height="34dp"
+        android:layout_width="241dp"
+        android:layout_height="52dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/distance"
         android:numStars="5"
-        android:stepSize="1"/>
+        android:stepSize="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/distance" />
 
     <View
         android:id="@+id/view"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="4dp"
         android:layout_marginTop="10dp"
+        android:background="#aaaaaa"
         app:layout_constraintTop_toBottomOf="@id/ratingBar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
